# rix

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
cmake/: rixConfig.cmake.in
examples/io/: append_text.cpp  binary_read_write.cpp  buffer_text_roundtrip.cpp  file_copy.cpp  read_write.cpp  try_read_missing.cpp  util_exists_and_size.cpp
examples/rix-io/: append_text.cpp  binary_read_write.cpp  buffer_text_roundtrip.cpp  file_copy.cpp  read_write.cpp  try_read_missing.cpp  util_exists_and_size.cpp
